--- a/index.html
+++ b/index.html
@@ -11791,7 +11791,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Solution-to-process-tweets-from-one-user">Solution to process tweets from one user<a class="anchor-link" href="#Solution-to-process-tweets-from-one-user">&#182;</a></h4><p><a href="https://haajraa.github.io/Project/solution-one-user.html">https://haajraa.github.io/Project/solution-one-user.html</a></p>
+<h4 id="Solution-to-process-tweets-from-one-user">Solution to process tweets from one user<a class="anchor-link" href="#Solution-to-process-tweets-from-one-user">&#182;</a></h4><p><a href="https://haajraa.github.io/project/solution-one-user.html">https://haajraa.github.io/project/solution-one-user.html</a></p>
 
 </div>
 </div>
@@ -11800,7 +11800,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Solution-to-search-text-from-all-tweets-and-Rank-Users-considering-Similarity">Solution to search text from all tweets and Rank Users considering Similarity<a class="anchor-link" href="#Solution-to-search-text-from-all-tweets-and-Rank-Users-considering-Similarity">&#182;</a></h4><p><a href="https://haajraa.github.io/Project/search-text.html">https://haajraa.github.io/Project/search-text.html</a></p>
+<h4 id="Solution-to-search-text-from-all-tweets-and-Rank-Users-considering-Similarity">Solution to search text from all tweets and Rank Users considering Similarity<a class="anchor-link" href="#Solution-to-search-text-from-all-tweets-and-Rank-Users-considering-Similarity">&#182;</a></h4><p><a href="https://haajraa.github.io/project/search-text.html">https://haajraa.github.io/project/search-text.html</a></p>
 
 </div>
 </div>
