--- a/search-text.html
+++ b/search-text.html
@@ -11783,7 +11783,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Main-Page">Main Page<a class="anchor-link" href="#Main-Page">&#182;</a></h4><p><a href="https://haajraa.github.io/Project">https://haajraa.github.io/Project</a></p>
+<h4 id="Main-Page">Main Page<a class="anchor-link" href="#Main-Page">&#182;</a></h4><p><a href="https://haajraa.github.io/project">https://haajraa.github.io/project</a></p>
 
 </div>
 </div>
