--- a/index.html
+++ b/index.html
@@ -13717,12 +13717,12 @@ PCk6PVxHU9JqeVJ0SriOpqT5GOhTxHU0Ja2OgT6FXEdT0lwMdElqhKNcJKkRBrokNcJAl6RGGOiS
     <span class="c1">#to remove the duplicates from the all word list</span>
     <span class="n">all_words_lst</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">all_words_list</span><span class="p">))</span>
     
-    <span class="n">all_words_list_size</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">all_words_list</span><span class="p">)</span>
+    <span class="n">all_words_list_size</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">all_words_lst</span><span class="p">)</span>
     <span class="c1">#create 2 vectors/1D arrays of all_words_list_size</span>
     <span class="n">v1</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="n">all_words_list_size</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int</span><span class="p">)</span>
     <span class="n">v2</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="n">all_words_list_size</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int</span><span class="p">)</span>
     <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span>
-    <span class="k">for</span><span class="p">(</span><span class="n">key</span><span class="p">)</span> <span class="ow">in</span> <span class="n">all_words_list</span><span class="p">:</span>
+    <span class="k">for</span><span class="p">(</span><span class="n">key</span><span class="p">)</span> <span class="ow">in</span> <span class="n">all_words_lst</span><span class="p">:</span>
         <span class="n">v1</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="n">dict1</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">key</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
         <span class="n">v2</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="n">dict2</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">key</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
         <span class="n">i</span> <span class="o">=</span> <span class="n">i</span> <span class="o">+</span><span class="mi">1</span>
@@ -13769,7 +13769,7 @@ PCk6PVxHU9JqeVJ0SriOpqT5GOhTxHU0Ja2OgT6FXEdT0lwMdElqhKNcJKkRBrokNcJAl6RGGOiS
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>0.9999999950939078</pre>
+<pre>0.99999999018781605</pre>
 </div>
 
 </div>
@@ -13839,15 +13839,15 @@ PCk6PVxHU9JqeVJ0SriOpqT5GOhTxHU0Ja2OgT6FXEdT0lwMdElqhKNcJKkRBrokNcJAl6RGGOiS
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>U10    0.360633505022
-U3    0.360458451793
-U5    0.338573767212
-U9    0.241216495182
-U7    0.224564997683
-U8    0.168068084335
-U1    0.165708572822
-U4    0.140786484424
-U2    0.00160609157229
+<pre>U3    0.27443485907
+U10    0.260547925907
+U5    0.241714859146
+U7    0.148996718756
+U9    0.146950544344
+U8    0.124056256952
+U1    0.10661732753
+U4    0.0946919230275
+U2    0.00083123873013
 </pre>
 </div>
 </div>
